--- a/functions/package.json
+++ b/functions/package.json
@@ -14,10 +14,12 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-handlebars": "^5.1.0",
     "firebase-admin": "^8.13.0",
     "firebase-functions": "^3.9.0",
     "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
+    "pug": "^3.0.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.6"
   },
